--- a/src/main/resources/com/vertex/vos/SalesInvoiceTemporary.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceTemporary.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,7 +23,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceTemporaryController">
+<BorderPane fx:id="salesInvoiceBorderPane" style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceTemporaryController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -45,7 +46,22 @@
                               </ImageView>
                            </graphic>
                         </Label>
-                        <TextField fx:id="customerTextField" />
+                        <HBox spacing="10.0">
+                           <children>
+                              <VBox alignment="TOP_RIGHT">
+                                 <children>
+                                    <TextField fx:id="customerTextField" />
+                                    <Label text="Store Name" />
+                                 </children>
+                              </VBox>
+                              <VBox alignment="TOP_RIGHT" disable="true">
+                                 <children>
+                                    <TextField fx:id="customerCodeTextField" />
+                                    <Label text="Customer Code" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                   <VBox>
@@ -59,7 +75,7 @@
                               </ImageView>
                            </graphic>
                         </Label>
-                        <HBox>
+                        <HBox spacing="10.0">
                            <children>
                               <VBox>
                                  <children>
@@ -71,10 +87,10 @@
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox>
+                              <VBox disable="true">
                                  <children>
                                     <TextField fx:id="salesmanLocationTextField" />
-                                    <HBox alignment="TOP_RIGHT">
+                                    <HBox alignment="TOP_RIGHT" disable="true">
                                        <children>
                                           <Label text="Salesman Location" />
                                        </children>
@@ -97,7 +113,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="itemsTable" editable="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="itemsTable" editable="true" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <columns>
                               <TableColumn prefWidth="75.0" text="Product">
                                  <columns>
@@ -108,9 +124,9 @@
                               </TableColumn>
                               <TableColumn fx:id="quantityItemCol" prefWidth="75.0" text="Quantity" />
                               <TableColumn fx:id="priceItemCol" prefWidth="75.0" text="Price" />
-                              <TableColumn fx:id="discountItemCol" prefWidth="75.0" text="Discount" />
                               <TableColumn fx:id="grossAmountCol" prefWidth="75.0" text="Gross Amount" />
-                              <TableColumn fx:id="netAmountItemCol" prefWidth="75.0" text="Net Amount" />
+                              <TableColumn fx:id="discountItemCol" prefWidth="75.0" text="Discount" />
+                              <TableColumn fx:id="netAmountItemCol" prefWidth="75.0" style="-fx-alignment: CENTER-RIGHT;" text="Net Amount" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -178,7 +194,7 @@
       </TabPane>
    </center>
    <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ButtonBar BorderPane.alignment="CENTER">
         <buttons>
           <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
             <Button fx:id="dispatchButton" layoutX="849.0" layoutY="10.0" mnemonicParsing="false" text="Dispatch" />
@@ -188,60 +204,69 @@
    <right>
       <HBox spacing="5.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox layoutX="10.0" layoutY="10.0">
-               <children>
-                  <GridPane>
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" />
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+            <BorderPane>
+               <top>
+                  <VBox BorderPane.alignment="CENTER">
                      <children>
-                        <Label fx:id="totalSales" text="Total Sales (VAT Inc)" />
-                        <Label fx:id="lessVat" text="Less VAT" GridPane.rowIndex="1" />
-                        <Label fx:id="amountNetOfVat" text="Amount: Net Of VAT" GridPane.rowIndex="2" />
-                        <Label fx:id="lessSCPWDDiscount" text="Less SC/PWD Disc" GridPane.rowIndex="3" />
-                        <Label fx:id="amountDue" text="Amount Due" GridPane.rowIndex="4" />
-                        <Label fx:id="addVAT" text="Add: VAT" GridPane.rowIndex="5" />
-                        <Label fx:id="totalAmountDue" text="Total Amount Due" GridPane.rowIndex="10" />
-                        <Label fx:id="vatableSales" text="VATable Sales" GridPane.rowIndex="6" />
-                        <Label fx:id="vatExemptSales" text="VAT-Exempt Sales" GridPane.rowIndex="7" />
-                        <Label fx:id="zeroRatedSales" text="Zero Rated Sales" GridPane.rowIndex="8" />
-                        <Label fx:id="vatAmount" text="VAT Amount" GridPane.rowIndex="9" />
-                        <Label fx:id="totalSalesVatInclusiveValue" text="0.00" GridPane.columnIndex="1" />
-                        <Label fx:id="lessVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="amountNetOfVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="lessSCPWDDiscountValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="amountDueValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="addVatValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Label fx:id="vatableSalesValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Label fx:id="vatExemptValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Label fx:id="zeroRatedSalesValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                        <Label fx:id="vatAmountValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                        <Label fx:id="totalAmountDueValue" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                        <GridPane>
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" />
+                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Gross Amount" />
+                              <Label text="Discount Amount" GridPane.rowIndex="1" />
+                              <Label text="Net Amount" GridPane.rowIndex="2" />
+                              <Label text="Paid" GridPane.rowIndex="3" />
+                              <Label text="Date Paid" GridPane.rowIndex="4" />
+                              <Label text="Balance" GridPane.rowIndex="5" />
+                              <Label text="Net Of Vat" GridPane.rowIndex="6" />
+                              <Label text="VAT" GridPane.rowIndex="7" />
+                              <Label fx:id="grossAmount" text="0.00" GridPane.columnIndex="1" />
+                              <Label fx:id="discountAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="netAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="paidAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="datePaid" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label fx:id="balanceAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="netOfVatAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Label fx:id="vatAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <Label text="Transaction Status" GridPane.rowIndex="8" />
+                              <Label text="Payment Status" GridPane.rowIndex="9" />
+                              <Label fx:id="transactionStatus" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                              <Label fx:id="paymentStatus" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </GridPane>
                      </children>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </GridPane>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </VBox>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </top>
+               <bottom>
+                  <VBox BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="Remarks" />
+                        <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </bottom>
+            </BorderPane>
          </children>
       </HBox>
    </right>
@@ -260,6 +285,12 @@
                   <DatePicker fx:id="dispatchDate" />
                </children>
             </VBox>
+            <VBox layoutX="20.0" layoutY="82.0" prefHeight="35.0" prefWidth="220.0">
+               <children>
+                  <Label text="Due Date" />
+                  <DatePicker fx:id="dueDate" />
+               </children>
+            </VBox>
             <VBox layoutX="20.0" layoutY="20.0">
                <children>
                   <Label text="Sales Type" />
@@ -276,12 +307,6 @@
                <children>
                   <Label text="Price Type" />
                   <ComboBox fx:id="priceType" prefWidth="166.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10;" />
-               </children>
-            </VBox>
-            <VBox>
-               <children>
-                  <Label text="Reference No." />
-                  <TextField fx:id="referenceNoTextField" />
                </children>
             </VBox>
             <VBox layoutX="20.0" layoutY="302.0">
