--- a/src/main/resources/com/vertex/vos/SalesReturnForm.fxml
+++ b/src/main/resources/com/vertex/vos/SalesReturnForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
@@ -15,10 +16,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesReturnFormController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesReturnFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -47,7 +51,21 @@
                               <VBox>
                                  <children>
                                     <Label text="Customer" />
-                                    <TextField fx:id="storeName" />
+                                    <HBox spacing="10.0">
+                                       <children>
+                                          <VBox alignment="TOP_RIGHT">
+                                             <children>
+                                                <TextField fx:id="storeName" />
+                                             </children>
+                                          </VBox>
+                                          <VBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0">
+                                             <children>
+                                                <TextField fx:id="customerCode" />
+                                                <Label text="Customer Code" />
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
                                  </children>
                               </VBox>
                               <VBox fx:id="selectCustomer" />
@@ -109,17 +127,22 @@
                   </HBox>
                </children>
             </VBox>
+            <VBox>
+               <children>
+                  <Label text="Return Type" />
+                  <ComboBox fx:id="returnTypeComboBox" editable="true" prefWidth="150.0" />
+               </children>
+            </VBox>
          </children>
       </VBox>
    </top>
    <bottom>
       <VBox style="-fx-padding: 10; -fx-spacing: 10;" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Remarks" />
-            <TextArea fx:id="remarksTextArea" prefHeight="200.0" prefWidth="200.0" />
             <ButtonBar prefHeight="40.0" prefWidth="200.0">
               <buttons>
                 <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
+                  <Button fx:id="confirmButton1" layoutX="845.0" layoutY="10.0" mnemonicParsing="false" text="Confirm" />
               </buttons>
             </ButtonBar>
          </children>
@@ -132,6 +155,8 @@
             <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
             <TableColumn fx:id="quantityCol" prefWidth="75.0" text="Quantity" />
             <TableColumn fx:id="unitPriceCol" prefWidth="75.0" text="Unit Price" />
+            <TableColumn fx:id="grossAmountCol" prefWidth="75.0" text="Gross Amount" />
+            <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount Amount" />
             <TableColumn fx:id="totalAmountCol" prefWidth="75.0" text="Total Amount" />
             <TableColumn fx:id="reasonCol" prefWidth="75.0" text="Reason" />
             <TableColumn fx:id="returnTypeCol" prefWidth="75.0" text="Return Type" />
@@ -141,4 +166,64 @@
          </columnResizePolicy>
       </TableView>
    </center>
+   <right>
+      <HBox spacing="5.0" BorderPane.alignment="CENTER">
+         <children>
+            <BorderPane>
+               <top>
+                  <VBox BorderPane.alignment="CENTER">
+                     <children>
+                        <GridPane>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label text="Gross Amount" />
+                              <Label text="Discount Amount" GridPane.rowIndex="1" />
+                              <Label text="Net Amount" GridPane.rowIndex="2" />
+                              <Label text="Applied" GridPane.rowIndex="3" />
+                              <Label text="Date Applied" GridPane.rowIndex="4" />
+                              <Label fx:id="grossAmount" text="0.00" GridPane.columnIndex="1" />
+                              <Label fx:id="discountAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="netAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="paidAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="datePaid" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label text="Transaction Status" GridPane.rowIndex="5" />
+                              <Label fx:id="transactionStatus" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label text="Posted" GridPane.rowIndex="6" />
+                              <Label fx:id="postStatus" layoutX="10.0" layoutY="195.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </GridPane>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </top>
+               <bottom>
+                  <VBox BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="Remarks" />
+                        <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </bottom>
+            </BorderPane>
+         </children>
+      </HBox>
+   </right>
 </BorderPane>
