--- a/src/main/resources/com/vertex/vos/SalesReturnForm.fxml
+++ b/src/main/resources/com/vertex/vos/SalesReturnForm.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesReturnFormController">
+<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesReturnFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -37,13 +37,51 @@
                      <children>
                         <Label fx:id="documentNo" styleClass="header" text="Sales Return No" />
                         <CheckBox fx:id="tplCheckBox" mnemonicParsing="false" text="Third Party" />
+                        <VBox>
+                           <children>
+                              <Label text="Return Date" />
+                              <DatePicker fx:id="returnDate" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="62.0" prefWidth="154.0">
+                           <children>
+                              <Label text="Price Type" />
+                              <ComboBox fx:id="priceType" editable="true" prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="305.0" layoutY="10.0">
+                           <children>
+                              <Label text="Received Date" />
+                              <DatePicker fx:id="receivedDate" />
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
-                  <Label fx:id="status" layoutX="10.0" layoutY="10.0" styleClass="header" text="STATUS" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
             <HBox spacing="10.0">
                <children>
+                  <VBox fx:id="salesmanBox">
+                     <children>
+                        <Label text="Salesman" />
+                        <HBox spacing="10.0">
+                           <children>
+                              <VBox alignment="TOP_RIGHT">
+                                 <children>
+                                    <TextField fx:id="salesmanName" />
+                                    <Label text="Salesman Name" />
+                                 </children>
+                              </VBox>
+                              <VBox alignment="TOP_RIGHT" disable="true" layoutX="10.0" layoutY="10.0">
+                                 <children>
+                                    <TextField fx:id="salesmanBranch" />
+                                    <Label text="Location" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                   <VBox fx:id="customerBox">
                      <children>
                         <VBox>
@@ -56,9 +94,10 @@
                                           <VBox alignment="TOP_RIGHT">
                                              <children>
                                                 <TextField fx:id="storeName" />
+                                                <Label text="Store Name" />
                                              </children>
                                           </VBox>
-                                          <VBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0">
+                                          <VBox alignment="TOP_RIGHT" disable="true" layoutX="10.0" layoutY="10.0">
                                              <children>
                                                 <TextField fx:id="customerCode" />
                                                 <Label text="Customer Code" />
@@ -73,40 +112,10 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox>
-                     <children>
-                        <Label text="Return Date" />
-                        <DatePicker fx:id="returnDate" />
-                     </children>
-                  </VBox>
-                  <VBox layoutX="270.0" layoutY="10.0" prefHeight="62.0" prefWidth="154.0">
-                     <children>
-                        <Label text="Price Type" />
-                        <ComboBox fx:id="priceType" editable="true" prefWidth="150.0" />
-                     </children>
-                  </VBox>
                </children>
             </HBox>
             <VBox fx:id="addBoxes">
                <children>
-                  <HBox fx:id="selectCustomerButton" alignment="CENTER_LEFT" spacing="10.0">
-                     <children>
-                        <VBox>
-                           <children>
-                              <HBox alignment="CENTER_LEFT">
-                                 <children>
-                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@assets/icons/Add.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Select Customer" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
                   <HBox fx:id="addProductButton" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
                      <children>
                         <VBox>
@@ -127,12 +136,6 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox>
-               <children>
-                  <Label text="Return Type" />
-                  <ComboBox fx:id="returnTypeComboBox" editable="true" prefWidth="150.0" />
-               </children>
-            </VBox>
          </children>
       </VBox>
    </top>
@@ -141,30 +144,42 @@
          <children>
             <ButtonBar prefHeight="40.0" prefWidth="200.0">
               <buttons>
-                <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
-                  <Button fx:id="confirmButton1" layoutX="845.0" layoutY="10.0" mnemonicParsing="false" text="Confirm" />
+                <Button fx:id="receiveButton" mnemonicParsing="false" text="Receive" />
+                  <Button fx:id="confirmButton" layoutX="845.0" layoutY="10.0" mnemonicParsing="false" text="Confirm" />
               </buttons>
             </ButtonBar>
          </children>
       </VBox>
    </bottom>
    <center>
-      <TableView fx:id="returnDetailTable" editable="true" BorderPane.alignment="CENTER">
-         <columns>
-            <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
-            <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
-            <TableColumn fx:id="quantityCol" prefWidth="75.0" text="Quantity" />
-            <TableColumn fx:id="unitPriceCol" prefWidth="75.0" text="Unit Price" />
-            <TableColumn fx:id="grossAmountCol" prefWidth="75.0" text="Gross Amount" />
-            <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount Amount" />
-            <TableColumn fx:id="totalAmountCol" prefWidth="75.0" text="Total Amount" />
-            <TableColumn fx:id="reasonCol" prefWidth="75.0" text="Reason" />
-            <TableColumn fx:id="returnTypeCol" prefWidth="75.0" text="Return Type" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
+      <BorderPane BorderPane.alignment="CENTER">
+         <center>
+            <TableView fx:id="returnDetailTable" editable="true">
+               <columns>
+                  <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
+                  <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
+                  <TableColumn fx:id="quantityCol" prefWidth="75.0" text="Quantity" />
+                  <TableColumn fx:id="unitPriceCol" prefWidth="75.0" text="Unit Price" />
+                  <TableColumn fx:id="grossAmountCol" prefWidth="75.0" text="Gross Amount" />
+                  <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount Amount" />
+                  <TableColumn fx:id="totalAmountCol" prefWidth="75.0" text="Total Amount" />
+                  <TableColumn fx:id="reasonCol" prefWidth="75.0" text="Reason" />
+                  <TableColumn fx:id="returnTypeCol" prefWidth="75.0" text="Return Type" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </center>
+         <bottom>
+            <VBox BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Return Type" />
+                  <ComboBox fx:id="returnTypeComboBox" editable="true" prefWidth="150.0" />
+               </children>
+            </VBox>
+         </bottom>
+      </BorderPane>
    </center>
    <right>
       <HBox spacing="5.0" BorderPane.alignment="CENTER">
@@ -187,6 +202,7 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
                               <Label text="Gross Amount" />
@@ -197,12 +213,14 @@
                               <Label fx:id="grossAmount" text="0.00" GridPane.columnIndex="1" />
                               <Label fx:id="discountAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label fx:id="netAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label fx:id="paidAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Label fx:id="datePaid" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label fx:id="appliedAmount" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="dateApplied" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <Label text="Transaction Status" GridPane.rowIndex="5" />
-                              <Label fx:id="transactionStatus" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="status" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                               <Label text="Posted" GridPane.rowIndex="6" />
                               <Label fx:id="postStatus" layoutX="10.0" layoutY="195.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Label text="Received" GridPane.rowIndex="7" />
+                              <Label fx:id="receivedStatus" layoutX="240.0" layoutY="195.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                            </children>
                            <VBox.margin>
                               <Insets />
