--- a/src/main/resources/com/vertex/vos/CollectionPaymentForm.fxml
+++ b/src/main/resources/com/vertex/vos/CollectionPaymentForm.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -66,10 +68,22 @@
                         <TextField fx:id="bankNameTextField" />
                      </children>
                   </VBox>
+                  <VBox fx:id="customerNameBox" layoutX="20.0" layoutY="80.0">
+                     <children>
+                        <Label text="Customer Name" />
+                        <TextField fx:id="customerNameTextField" />
+                     </children>
+                  </VBox>
                   <VBox fx:id="chequeNumberBox" layoutX="10.0" layoutY="70.0">
                      <children>
                         <Label text="Cheque Number" />
                         <TextField fx:id="chequeNumberTextField" />
+                        <VBox>
+                           <children>
+                              <Label text="Cheque Date" />
+                              <DatePicker fx:id="chequeDate" />
+                           </children>
+                        </VBox>
                      </children>
                   </VBox>
                   <VBox fx:id="amountBox" layoutX="10.0" layoutY="130.0">
@@ -78,13 +92,16 @@
                         <TextField fx:id="collectionAmount" />
                      </children>
                   </VBox>
-                  <VBox layoutX="10.0" layoutY="190.0">
+                  <VBox fx:id="remarksBox" layoutX="10.0" layoutY="190.0">
                      <children>
                         <Label text="Remarks" />
                         <TextArea fx:id="remarksTextArea" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </VBox>
          </left>
       </BorderPane>
